fix(dashboard): wrap long image/container names
- add a zero-width space to allow breaking between repo and tag
- adjust style to wrap image if the above isn't enough

Fixes https://github.com/argoproj/argo-rollouts/issues/1536

--- a/ui/src/app/components/rollout/rollout.scss
+++ b/ui/src/app/components/rollout/rollout.scss
@@ -112,6 +112,8 @@
     &--orange#{&}--dark {
         color: $sherbert;
     }
+
+    overflow-wrap: anywhere;
 }
 
 .info {
